<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground">
    <!-- Scrollable Item below header and above footer -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <!-- image view  -->
            <ImageView
                android:id="@+id/MainImageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:src="@drawable/image4"
                android:background="@color/fullyTransparent" />
            <View
                android:id="@+id/line_splitter"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/cursorColor" />
            <!-- end of image view -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/ltyellow"
                        android:text="@string/price"
                        android:id="@+id/lblPrice" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/textColor"
                        android:text="@string/terms"
                        android:id="@+id/lblDescription" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginBottom="10dp"
                android:textColor="@color/labelColor"
                android:text="@string/specs" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/make"
                    android:id="@+id/lblMake" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/textColor"
                    android:text="Toyota"
                    android:id="@+id/txtMake" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/model"
                    android:id="@+id/lblModel" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:textColor="@color/textColor"
                    android:text="RAV 4"
                    android:id="@+id/txtModel" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/model_variation"
                    android:id="@+id/lblModelVar" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:textColor="@color/textColor"
                    android:text="J"
                    android:id="@+id/txtModelVar" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/year"
                    android:id="@+id/lblYear" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="2016"
                    android:id="@+id/txtYear" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/drivetrain"
                    android:id="@+id/lblDrivetrain" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="4WD"
                    android:id="@+id/txtDriveTrain" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/engine"
                    android:id="@+id/lblEngine" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="6 Cylinder Petrol"
                    android:id="@+id/txtEngine" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/transmission"
                    android:id="@+id/lblTransmission" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="6 Speed Manual"
                    android:id="@+id/txtTransmission" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/mileage"
                    android:id="@+id/lblMileage" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="80,000"
                    android:id="@+id/txtMileage" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/vin"
                    android:id="@+id/lblVin" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="ASD45654"
                    android:id="@+id/txtVin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/stock_no"
                    android:id="@+id/lblStockNo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="LP56-89"
                    android:id="@+id/txtStockNo" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/vat"
                    android:id="@+id/lblVat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="9097"
                    android:id="@+id/txtVat" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/ext_color"
                    android:id="@+id/lblExtColor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="Exterior Color"
                    android:id="@+id/txtExtColor" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/int_color"
                    android:id="@+id/lblIntColor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="Interior Color"
                    android:id="@+id/txtIntColor" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/labelColor"
                    android:text="@string/owner"
                    android:id="@+id/lblOwner" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/field_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:id="@+id/ownerImage"
                    android:background="@drawable/icon_profile" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner"
                    android:gravity="bottom"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/ltyellow"
                    android:id="@+id/txtOwner" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_owner"
                    android:id="@+id/btnMessageOwner"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>